--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -863,6 +863,53 @@ body.employer .container.body { width: inherit; background-color: transparent; p
   }
 }
 
+// Modals
+
+#eval_warning_modal {
+  width: 760px;
+  margin-left: - 380px;
+  
+}
+
+
+#login_modal, #register_modal, #search_learn_more_modal, #clone_challenge_modal, #eval_warning_modal{
+  background-color: transparent; 
+  border: none; 
+  box-shadow: none;
+  
+  .explorecontainer { width: 495px; background-color: transparent; border:none; }
+  .explorenewusercontent { margin:45px; box-shadow: 0 0 30px 12px #888; }
+  .exploreheader { 
+    width: inherit;
+    padding: 15px 0 7px 12px;
+    text-align: left;
+    h1 { 
+      margin-bottom: 0; 
+      line-height: 23px; 
+      
+      img { 
+        height:65px; margin:-16px -4px -10px -5px; 
+      }
+      span { font-size:26px; }
+    } 
+  }
+  .explorebody { 
+    min-height: 204px; 
+    text-align: center;
+    
+    h4 {margin-top: 15px;}
+    p { padding: 10px; font-size: 15px; }
+    .social-sign-in-options {
+      div { margin: 0 auto 12px; width: 244px;}
+      a { float: none; padding: 4px 0; display: block; }
+      img { height:30px; }
+    }
+  }
+  hr {margin: 0;}
+  .landing_yellow {background-color: $landing_yellow;}
+  
+}
+
 .sales_help_modal, .enterprise_modal, .take_support_modal {
   .modal-header {
     border-radius: 6px 6px 0 0; 
