Copy fixes and GTG.

--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -89,4 +89,4 @@
           .alert-preview.small-text.orange{ style: "margin: 20px auto -20px auto;"}
             %p{ style: "margin: 0;"} Your trial account limits you to testing #{Group::TRIAL_CANDIDATE_LIMIT} candidates. You've already tested #{@candidate_count}.
         .row{ style: "margin: 40px auto 30px;" }
-          %a.submit_button{ style: "float: none;", onclick: "formRoute()"} Create Evaluation
+          %a.submit_button{ style: "float: none;", onclick: "formRoute()", descriptor: "eval-submit"} Create Evaluation
