--- a/app/views/modals/_eval_warning.html.haml
+++ b/app/views/modals/_eval_warning.html.haml
@@ -19,9 +19,9 @@
       %hr
       .explorebody{ style: "padding: 12px 15px; min-height: inherit;"}
         %h5
-          MetaBright Evaluations can't be edited after they're created. And the future edits you make to custom Challenges won't be reflected in already-created Evaluations. 
+          MetaBright Evaluations can't be edited after they're created, and future edits you make to custom Challenges won't be reflected in already-created Evaluations. 
         %h5
           If there are any changes you want to make in your custom Challenges, please make them before creating this Evaluation.
         %button.submit_button_blue.modal_close{ style: "float: left; width: inherit;"} Back  
-        %button#submit_eval_conf.submit_button{ onclick: ""} Create Evaluation
+        %button#submit_eval_conf.submit_button{ onclick: ""} Finish
         .clear_floats
