--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -7,7 +7,9 @@
     .header
       %img{ src: GIANT_STONEY, alt: "Stoney"}
       .text{ style: ""}
-        - if @was_trial
+        - if @is_trial
+          %h1{ style: "margin-top:0;" } Welcome to MetaBright!
+        - elsif @was_trial
           %h1{ style: "margin-top:0;" } Upgrade Successful!
         - else
           %h1{ style: "margin-top:0;" } Welcome to MetaBright!
@@ -29,35 +31,35 @@
       - else
         %h3 Your company's hiring is about to get turbocharged!
         %h5 Take a look at the nav bar at the top of the page. Here's a quick overview of what everything does:
-      %ul 
-        %li 
+      %ul
+        %li
           .picture
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/evaluations_dark.png" }
           .text
-            %span Evaluations: 
+            %span Evaluations:
             This is where you create and manage all your Evaluations. Your candidates' results are organized here as well.
             %div{ style: "margin: 15px 10px 20px 0;"}
               - if @was_trial
                 = link_to "Create an Evaluation", new_group_evaluation_url(@group), class: "submit_button", style: "float: inherit;"
               - else
                 = link_to "Create your first Evaluation", new_group_evaluation_url(@group), class: "submit_button", style: "float: inherit;"
-        %li 
+        %li
           .picture
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/challenges_dark.png" }
           .text
-            %span Challenges: 
+            %span Challenges:
             If you want to test your candidates on custom content specific to your company, you'll want to start here. After you create a Challenge, you can access it in any Evaluation you create.
             %div{ style: "margin: 15px 10px 20px 0;"}
               - if @was_trial
                 = link_to "Create a custom Challenge", new_group_path_url(@group), class: "submit_button", style: "float: inherit;"
               - else
                 = link_to "Create your first custom Challenge", new_group_path_url(@group), class: "submit_button", style: "float: inherit;"
-        %li 
+        %li
           .picture
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/account_dark.png" }
           .text
             - plan = @group.plan_type
-            %span Account: 
+            %span Account:
             Details of your company plan and settings are located here. You can invite additional people to your account, change your plan, and even add custom CSS styles to your Evaluations.
             %div{ style: "margin: 15px 10px 20px 0;"}
               - if plan == "single"
@@ -65,4 +67,3 @@
               - else
                 = link_to "Invite people to your account", account_group_url(@group), class: "submit_button", style: "float: inherit;"
       %h5 If you need a hand getting going, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
-      
