putting script in right place

--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -107,6 +107,7 @@
   });
 
 = render "layouts/custom_styles"
-  
+
+:javascript
   $(function() { $('body').hide().show(); });
   -# Google Chrome hack
