--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -6,7 +6,7 @@
     %a{ href: profile_path(user.username) }
       %img.commentphoto{ src: user.picture, onerror: "user_img_error(this);" }
   %div{ style: "overflow:hidden; margin: 0 0 0 43px;" }
-    %pre.unstyled.text_content{ style: "font-size: 13px; color: black; margin-left: 0; margin-bottom: 0;" }= comment.content
+    %p.unstyled.text_content{ style: "font-size: 12px; color: rgb(51, 51, 51); margin-left: 0; margin-bottom: 0;" }= comment.content
     %p{ style: "margin-left: 0;" } 
       %a{ href: profile_path(user.username) }= user.name
       about #{time_ago_in_words(comment.created_at)} ago.
