bug fixes and copy change

--- a/app/views/pages/airs_landing.html.haml
+++ b/app/views/pages/airs_landing.html.haml
@@ -2,7 +2,7 @@
   body.employer { background-image: none; background-color: white;}
   .container.body { width: 100% !important; padding: 0 !important; margin-top: 40px; }
 
-  
+
 #airs#custom_landing
   #image_wrapper
   #content_wrapper
@@ -20,9 +20,9 @@
             %p.speech.right "Talk about a time saver. MetaBright is a great talent screener. I never have to wonder if someone has the skills necessary to do the job."
           %div
             .bio
-              %p 
+              %p
                 Nisa Q.
-                %br 
+                %br
                 Recruiter at LinkedIn
             .picture
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/nisa.jpg", class: "img-circle"
@@ -31,9 +31,9 @@
             %p.speech.center "MetaBright's approach to assessing an individual's strengths and weaknesses brings a whole new level of analytical riguor to hiring."
             %div
               .bio
-                %p 
+                %p
                   Val L.
-                  %br 
+                  %br
                   Consultant at a Global Consulting Firm
               .picture
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/val.jpg", class: "img-circle"
@@ -42,31 +42,31 @@
             %p.speech.left "MetaBright Challenges are a blast. I love that as I compete on MetaBright, I'm validating my professional credentials."
           %div
             .bio
-              %p 
+              %p
                 Calvin J.
-                %br 
+                %br
                 PM, Self-Driving Cars at Google
-            .picture 
+            .picture
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/calvin.jpg", class: "img-circle"
         .clear_floats
     %article#art_2
       .area
         .make_room_sides
-          %h2{ style: "margin-bottom: 0;"} 
+          %h2{ style: "margin-bottom: 0;"}
             The MetaBright Evaluator
           %p.be_bold
             Never waste your time in an interview again. The MetaBright Evaluator is an OFCCP compliant skills assessment platform that measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just direct your candidates to your unique MetaBright URL, and we take care of the rest.
     %article#art_3
-      .sexy_time 
+      .sexy_time
         .make_room_sides
-          %section.gradient_down 
-            .holder.gradient_up 
+          %section.gradient_down
+            .holder.gradient_up
               .inner_holder
                 .text
-                  %h1 
-                    What skills does your company need? 
-                  %p 
-                    The Evaluator helps you identify the job candidates that have the skills your company needs to perform its best. Choose from our growing collection of MetaBright Challenges, or create your own. 
+                  %h1
+                    What skills does your company need?
+                  %p
+                    The Evaluator helps you identify the job candidates that have the skills your company needs to perform its best. Choose from our growing collection of MetaBright Challenges, or create your own.
                 .image.right{ style: "width: 47%; box-shadow: none; "}
                   %ul
                     - @paths.first(24).each do |path|
@@ -78,144 +78,144 @@
           %section
             .holder
               .inner_holder
-                .image{ style: "width: 55%; margin-top: 21px;"} 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/submit4_transparent_bg.png"} 
-                .text.right{ style: "width: 38%;"} 
-                  %h1 
-                    Expand your candidate pool. 
-                  %p 
-                    Don't miss out on your next top achiever. Your Evaluator subscription lets you measure an unlimited number of candidates. Go ahead, aim wide with your talent search. 
+                .image{ style: "width: 55%; margin-top: 21px;"}
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/submit4_transparent_bg.png"}
+                .text.right{ style: "width: 38%;"}
+                  %h1
+                    Expand your candidate pool.
+                  %p
+                    Don't miss out on your next top achiever. Your Evaluator subscription lets you measure an unlimited number of candidates. Go ahead, aim wide with your talent search.
           .clear_floats
-          %section.gradient_down 
+          %section.gradient_down
             .holder.gradient_up
               .inner_holder
-                .text{ style: "width: 46%; "} 
-                  %h1 
-                    Robust and dynamic testing. 
-                  %p 
-                    Take advantage of MetaBright's industry-leading testing. We assess your candidates across more dimensions than anyone else. And our question formats uncover your candidates' real-world knowledge. 
-                .image.right{ style: "margin-top:15px; "} 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/CR.png"} 
+                .text{ style: "width: 46%; "}
+                  %h1
+                    Robust and dynamic testing.
+                  %p
+                    Take advantage of MetaBright's industry-leading testing. We assess your candidates across more dimensions than anyone else. And our question types uncover your candidates' real-world knowledge. 
+                .image.right{ style: "margin-top:15px; "}
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/CR.png"}
           .clear_floats
           %section
             .holder
               .inner_holder
-                .image{ style: "width: 52%; margin-top: 13px;"} 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/eval_overview_big_zoom8.png"} 
-                .text.right{ style: "width: 40%;"} 
-                  %h1 
-                    Compare your candidates at a glance. 
-                  %p 
-                    The Evaluator concisely organizes all of your candidates in a single view. Even better, you can sort and compare your candidates based on their aptitude. Try doing that with resumes. 
+                .image{ style: "width: 52%; margin-top: 13px;"}
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/eval_overview_big_zoom8.png"}
+                .text.right{ style: "width: 40%;"}
+                  %h1
+                    Compare your candidates at a glance.
+                  %p
+                    The Evaluator concisely organizes all of your candidates in a single view. Even better, you can sort and compare your candidates based on their aptitude. Try doing that with resumes.
           .clear_floats
-          %section.gradient_down 
+          %section.gradient_down
             .holder
               .inner_holder
-                .text{ style: "width: 38%;"} 
-                  %h1 
-                    Make a confident choice. 
-                  %p 
-                    Know for certain when a candidate is deserving of an interview. Examine their performance, drill down into responses, and see how they stack-up against their peers.  
-                .image.right{ style: "width: 55%; margin-top:11px;" } 
-                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"} 
+                .text{ style: "width: 38%;"}
+                  %h1
+                    Make a confident choice.
+                  %p
+                    Know for certain when a candidate is deserving of an interview. Examine their performance, drill down into responses, and see how they stack-up against their peers.
+                .image.right{ style: "width: 55%; margin-top:11px;" }
+                  %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"}
     %article#art_4
       .click-it.jagged_top.jagged_bottom
         .holder
-          %p 
+          %p
             %span Guaranteed
             to improve your quality of hire and decrease your time to fill. Sign up and begin testing your candidates in 60 seconds!
           .big_submit_button{ style: "text-align: right;"}
             = link_to "SIGN UP NOW!", promo_pricing_path, class: "submit_button", descriptor: "signup-link"
     %article#art_5
-      .area.pitch_tiles{ style: "margin-top:0; "} 
+      .area.pitch_tiles{ style: "margin-top:0; "}
         .make_room_sides
-          %h2 Why you'll love MetaBright 
-          .tile 
-            .circle 
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/medal_green.png" 
-            %p Choose from our MetaBright skills, or create your own for your company. 
-          .tile 
-            .circle 
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/group_green.png" 
-            %p Expand your candidate pool, and quickly identify top performers. 
-          .tile 
-            .circle 
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/clock_green.png" 
-            %p Never waste your time interviewing another underqualified candidate. 
+          %h2 Why you'll love MetaBright
+          .tile
+            .circle
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/medal_green.png"
+            %p Choose from our MetaBright skills, or create your own for your company.
+          .tile
+            .circle
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/group_green.png"
+            %p Expand your candidate pool, and quickly identify top performers.
+          .tile
+            .circle
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/clock_green.png"
+            %p Never waste your time interviewing another underqualified candidate.
     %article#art_6
       / The stretcher class allows for the opacity to peek through at the bottom of this article
       .stretcher
         .area
-          #screen_carousel.carousel.slide 
-            .carousel-inner 
-              .active.item 
-                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade_page.png" } 
-              .item 
-                %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/arena.png" } 
-              .item 
-                %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/challenge.png" } 
-              .item 
+          #screen_carousel.carousel.slide
+            .carousel-inner
+              .active.item
+                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade_page.png" }
+              .item
+                %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/arena.png" }
+              .item
+                %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/challenge.png" }
+              .item
                 %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/evaluator.png" }
               .item
-                %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/submissions.png" } 
+                %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/submissions.png" }
               .item
                 %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/manager.png" }
-            %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
+            %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹
             %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} ›
     %article#art_7
       .area
-        %h2{ style: "margin-bottom: 0;"} 
-          Our philosophy 
+        %h2{ style: "margin-bottom: 0;"}
+          Our philosophy
         %p.be_bold
-          When evaluating a potential new-hire, we believe the most important thing is whether that person has the skills necessary to do the job. Things like where they went to school or where they previously worked are just distractions from what really matters: Can they perform? 
+          When evaluating a potential new-hire, we believe the most important thing is whether that person has the skills necessary to do the job. Things like where they went to school or where they previously worked are just distractions from what really matters: Can they perform?
     %article#art_8
       .area
         .make_room
-          %h2 FAQ 
-          #faq_accordion.accordion           
-            .accordion-group 
-              .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseOne"} 
-                  How are my candidates evaluated? 
+          %h2 FAQ
+          #faq_accordion.accordion
+            .accordion-group
+              .accordion-heading
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseOne"}
+                  How are my candidates evaluated?
               #collapseOne.accordion-body.collapse.in
-                .accordion-inner 
-                  We evaluate your candidates with assessments called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
-                  We distill all this information down into one easy to understand score that indicates how capable your candidates actually are. 
-            .accordion-group 
-              .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"} 
-                  How long will it take for my candidates to complete a Challenge? 
-              #collapseTwo.accordion-body.collapse 
-                .accordion-inner 
+                .accordion-inner
+                  We evaluate your candidates with assessments called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished.
+                  We distill all this information down into one easy to understand score that indicates how capable your candidates actually are.
+            .accordion-group
+              .accordion-heading
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"}
+                  How long will it take for my candidates to complete a Challenge?
+              #collapseTwo.accordion-body.collapse
+                .accordion-inner
                   It depends on the Challenge, and the skill of the candidate, but most Challenges can be completed in under 20 minutes.
-            .accordion-group 
-              .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseThree"} 
-                  Do I have to sign up for a contract or pre-pay for my Evaluator subscription? 
-              #collapseThree.accordion-body.collapse 
-                .accordion-inner 
+            .accordion-group
+              .accordion-heading
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseThree"}
+                  Do I have to sign up for a contract or pre-pay for my Evaluator subscription?
+              #collapseThree.accordion-body.collapse
+                .accordion-inner
                   Nope! There are no contracts or obligations to continue your membership any longer than you want. You'll be billed monthly and can cancel anytime.
-            .accordion-group 
-              .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"} 
-                  How does MetaBright work to prevent cheating? 
-              #collapseFour.accordion-body.collapse 
-                .accordion-inner 
-                  MetaBright questions are timed so we have a good understanding of who actually knows the material and who is trying to cheat (or who is getting lucky with a guess!).  
-                  Our algorithms look for irregularities when a candidate is taking a Challenge and adjust their percentile accordingly. 
-                  We also work to ensure that your candidate is actually the one taking the Challenge. 
-            .accordion-group 
-              .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFive"} 
-                  Why does MetaBright look so playful? 
-              #collapseFive.accordion-body.collapse 
-                .accordion-inner 
-                  We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the testing process feel like a game.  
-                  This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities! 
+            .accordion-group
+              .accordion-heading
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"}
+                  How does MetaBright work to prevent cheating?
+              #collapseFour.accordion-body.collapse
+                .accordion-inner
+                  MetaBright questions are timed so we have a good understanding of who actually knows the material and who is trying to cheat (or who is getting lucky with a guess!).
+                  Our algorithms look for irregularities when a candidate is taking a Challenge and adjust their percentile accordingly.
+                  We also work to ensure that your candidate is actually the one taking the Challenge.
+            .accordion-group
+              .accordion-heading
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFive"}
+                  Why does MetaBright look so playful?
+              #collapseFive.accordion-body.collapse
+                .accordion-inner
+                  We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the testing process feel like a game.
+                  This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities!
     %article#art_9
       .click-it.jagged_top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
         .holder
-          %p 
+          %p
             %span Guaranteed
             to improve your quality of hire and decrease your time to fill. Sign up and begin testing your candidates in 60 seconds!
           .big_submit_button
